# xfce4-volumed-pulse

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  THANKS  TODO  autogen.sh  configure.ac  configure.ac.in  meson.build  meson_options.txt  module.xml
data/: Makefile.am  meson.build  xfce4-volumed-pulse.desktop.in  xfce4-volumed-pulse.desktop.in.in  xfce4-volumed.desktop
po/: LINGUAS  POTFILES.in  ast.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fr.po  gl.po  he.po  hu.po  id.po  ie.po  it.po  ja.po  kk.po  ko.po  lo.po  lt.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sq.po  sr.po  sv.po  th.po  tr.po  ug.po  uk.po  (+3 more)
src/: Makefile.am  main.c  meson.build  xvd_data_types.h  xvd_keys.c  xvd_keys.h  xvd_mixer.c  xvd_mixer.h  xvd_notify.c  xvd_notify.h  xvd_pulse.c  xvd_pulse.h  xvd_xfconf.c  xvd_xfconf.h
